<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".SignUpPage">

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/signup_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/signup_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/signup_password_check"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/signup_phone"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="@string/btn_register" />
    </LinearLayout>

</LinearLayout>